@@ -1,0 +1,7 @@
+;To use this file, rename it to luamacro.ini
+
+;MacroPath allows loading macros and events from the specified paths.
+;This is a sequence of zero or more paths separated with semicolons.
+;The default is %FARPROFILE%\Macros\scripts%.
+;
+;MacroPath=%FARPROFILE%\Macros\scripts%
