@@ -10,7 +10,8 @@ LUALIB = $(FAR_WORKDIR)/luafar3.dll
 
 DOCS = _globalinfo.lua api.lua luamacro.lua macrotest.lua utils.lua \
        mbrowser.lua lang.lua panelsort.lua winapi.lua farapi.lua moonscript.lua \
-       keymacro.lua lm_eng.lng lm_rus.lng lm_sky.lng lm_spa.lng
+       keymacro.lua lm_eng.lng lm_rus.lng lm_sky.lng lm_spa.lng \
+       luamacro.example.ini
 SRCS = luafar/luaplug.c
 USERCPP = -Iluasdk/include -DEXPORT_OPEN -DEXPORT_EXITFAR -DEXPORT_CONFIGURE \
           -DEXPORT_PROCESSEDITOREVENT -DEXPORT_PROCESSVIEWEREVENT \
