@@ -1,4 +1,11 @@
-﻿shmuel 23.08.2014 00:31:33 +0200 - build 413
+﻿shmuel 23.08.2014 02:13:33 +0200 - build 414
+
+1. M#2469: Общие макросы.
+   Добавлен файл luamacro.example.ini, активируется при его переименовании в luamacro.ini.
+   В нём может быть установлено значение `MacroPath`, указывающее, с каких путей будут загружаться
+   стационарные макрофайлы. Значение по умолчанию: %FARPROFILE%\Macros\scripts.
+
+shmuel 23.08.2014 00:31:33 +0200 - build 413
 
 1. mf.usermenu: режим "синхронного вызова" был сломан (в билде Far 3.0.3914).
 
